# RAGCTL

./: .gitignore  README.md  pyproject.toml  requirements.txt
ragctl/: __init__.py  __main__.py  cli.py  config.py  model.py  ragctl.py
ragctl/data/: README.md
src/ragctl/: __init__.py  cli.py  config.py  ragctl.py
